[gd_scene load_steps=12 format=3 uid="uid://ch2td3qmw1b5q"]

[ext_resource type="Script" path="res://level/zone/main_menu.gd" id="1_3tuu3"]
[ext_resource type="PackedScene" uid="uid://8tj7mmqgstap" path="res://level/zone/common/moon_background.tscn" id="4_1vpba"]
[ext_resource type="PackedScene" uid="uid://cu5yik8gbqa5w" path="res://level/zone/common/base_tilemap.tscn" id="5_cun54"]
[ext_resource type="AudioStream" uid="uid://b0qylj35kyl6d" path="res://assets/sound/menu_music_new.mp3" id="6_kwflx"]
[ext_resource type="PackedScene" uid="uid://ctrcaf3beyllm" path="res://level/zone/common/base_zone.tscn" id="7_l52vh"]
[ext_resource type="PackedScene" uid="uid://wihx5jp6l3tq" path="res://actor/player/player.tscn" id="9_40sjv"]
[ext_resource type="Texture2D" uid="uid://cgyu8act22til" path="res://assets/menu/logo.png" id="11_exp17"]

[sub_resource type="Animation" id="Animation_2m7t1"]
resource_name = "New Anim"

[sub_resource type="Animation" id="Animation_28eea"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer2/BackgroundColor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/RichTextLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_28fh0"]
resource_name = "fade_title"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer2/BackgroundColor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/RichTextLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4, 5.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g62fg"]
_data = {
"New Anim": SubResource("Animation_2m7t1"),
"RESET": SubResource("Animation_28eea"),
"fade_title": SubResource("Animation_28fh0")
}

[node name="main_menu" type="Node2D"]
script = ExtResource("1_3tuu3")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kwflx")
volume_db = -5.0
autoplay = true

[node name="base_zone" parent="." instance=ExtResource("7_l52vh")]

[node name="CloudBackground" parent="base_zone" index="4"]
layer = -99

[node name="MoonParallaxBackground" parent="base_zone" index="5"]
visible = false

[node name="forest_decoration1" parent="base_zone" index="13"]
layer_0/tile_data = PackedInt32Array(1048575, 3, 29, 1114111, 3, 30, 1179647, 3, 31, 851968, 65539, 27, 917504, 65539, 28, 983040, 65539, 29, 1048576, 65539, 30, 1114112, 65539, 31, 786433, 131075, 26, 851969, 131075, 27, 917505, 131075, 28, 983041, 131075, 29, 1048577, 131075, 30, 1114113, 131075, 31, 917506, 196611, 28, 983042, 196611, 29, 1048578, 196611, 30, 1114114, 196611, 31, 917507, 262147, 28, 983043, 262147, 29, 1048579, 262147, 30, 1114115, 262147, 31, 786436, 327683, 26, 851972, 327683, 27, 917508, 327683, 28, 983044, 327683, 29, 1048580, 327683, 30, 1114116, 327683, 31, 786437, 393219, 26, 851973, 393219, 27, 917509, 393219, 28, 983045, 393219, 29, 1048581, 393219, 30, 1114117, 393219, 31, 917510, 458755, 28, 983046, 458755, 29, 1048582, 458755, 30, 1114118, 458755, 31, 851975, 524291, 27, 917511, 524291, 28, 983047, 524291, 29, 1048583, 524291, 30, 1114119, 524291, 31, 786440, 589827, 26, 851976, 589827, 27, 917512, 589827, 28, 983048, 589827, 29, 1048584, 589827, 30, 1114120, 589827, 31, 851977, 655363, 27, 917513, 655363, 28, 983049, 655363, 29, 1048585, 655363, 30, 1114121, 655363, 31, 983050, 720899, 29, 1048586, 720899, 30, 1114122, 720899, 31, 786443, 786435, 26, 851979, 786435, 27, 917515, 786435, 28, 983051, 786435, 29, 1048587, 786435, 30, 1114123, 786435, 31, 786444, 851971, 26, 851980, 851971, 27, 917516, 851971, 28, 983052, 851971, 29, 1048588, 851971, 30, 1114124, 851971, 31, 983053, 917507, 29, 1048589, 917507, 30, 1114125, 917507, 31, 917520, 1835011, 28, 983056, 1835011, 29, 1048592, 1835011, 30, 1114128, 1835011, 31, 1048593, 1900547, 30, 1114129, 1900547, 31, 917522, 1966083, 28, 983058, 1966083, 29, 1048594, 1966083, 30, 1114130, 1966083, 31, 851987, 2031619, 27, 917523, 2031619, 28, 983059, 2031619, 29, 1048595, 2031619, 30, 1114131, 2031619, 31, 917524, 1376259, 28, 983060, 2097155, 29, 1048596, 2097155, 30, 1114132, 2097155, 31, 1048597, 1441795, 30, 1114133, 1441795, 31, 917526, 1507331, 28, 983062, 1507331, 29, 1048598, 1507331, 30, 1114134, 1507331, 31, 720919, 1572867, 25, 786455, 1572867, 26, 851991, 1572867, 27, 917527, 1572867, 28, 983063, 1572867, 29, 1048599, 1572867, 30, 1114135, 1572867, 31, 720920, 1638403, 25, 786456, 1638403, 26, 851992, 1638403, 27, 917528, 1638403, 28, 983064, 1638403, 29, 1048600, 1638403, 30, 1114136, 1638403, 31, 851993, 1703939, 27, 917529, 1703939, 28, 983065, 1703939, 29, 1048601, 1703939, 30, 1114137, 1703939, 31, 1048602, 1769475, 30, 1114138, 1769475, 31, 786459, 1835011, 26, 851995, 1835011, 27, 917531, 1835011, 28, 983067, 1835011, 29, 1048603, 1835011, 30, 1114139, 1835011, 31, 655388, 1900547, 24, 720924, 1900547, 25, 786460, 1900547, 26, 851996, 1900547, 27, 917532, 1900547, 28, 983068, 1900547, 29, 1048604, 1900547, 30, 1114140, 1900547, 31, 720925, 1966083, 25, 786461, 1966083, 26, 851997, 1966083, 27, 917533, 1966083, 28, 983069, 1966083, 29, 1048605, 1966083, 30, 1114141, 1966083, 31, 786462, 2031619, 26, 851998, 2031619, 27, 917534, 2031619, 28, 983070, 2031619, 29, 1048606, 2031619, 30, 1114142, 2031619, 31, 983071, 2097155, 29, 1048607, 2097155, 30, 1114143, 2097155, 31, 983072, 3, 29, 1048608, 3, 30, 1114144, 3, 31, 852001, 65539, 27, 917537, 65539, 28, 983073, 65539, 29, 1048609, 65539, 30, 1114145, 65539, 31, 786466, 131075, 26, 852002, 131075, 27, 917538, 131075, 28, 983074, 131075, 29, 1048610, 131075, 30, 1114146, 131075, 31, 917539, 196611, 28, 983075, 196611, 29, 1048611, 196611, 30, 1114147, 196611, 31, 917540, 262147, 28, 983076, 262147, 29, 1048612, 262147, 30, 1114148, 262147, 31, 786469, 327683, 26, 852005, 327683, 27, 917541, 327683, 28, 983077, 327683, 29, 1048613, 327683, 30, 1114149, 327683, 31, 786470, 393219, 26, 852006, 393219, 27, 917542, 393219, 28, 983078, 393219, 29, 1048614, 393219, 30, 1114150, 393219, 31, 917543, 458755, 28, 983079, 458755, 29, 1048615, 458755, 30, 1114151, 458755, 31, 852008, 524291, 27, 917544, 524291, 28, 983080, 524291, 29, 1048616, 524291, 30, 1114152, 524291, 31, 786473, 589827, 26, 852009, 589827, 27, 917545, 589827, 28, 983081, 589827, 29, 1048617, 589827, 30, 1114153, 589827, 31, 852010, 655363, 27, 917546, 655363, 28, 983082, 655363, 29, 1048618, 655363, 30, 1114154, 655363, 31, 983083, 720899, 29, 1048619, 720899, 30, 1114155, 720899, 31, 786476, 786435, 26, 852012, 786435, 27, 917548, 786435, 28, 983084, 786435, 29, 1048620, 786435, 30, 1114156, 786435, 31, 786477, 851971, 26, 852013, 851971, 27, 917549, 851971, 28, 983085, 851971, 29, 1048621, 851971, 30, 1114157, 851971, 31, 983086, 917507, 29, 1048622, 917507, 30, 1114158, 917507, 31, 852015, 983043, 27, 917551, 983043, 28, 983087, 983043, 29, 1048623, 983043, 30, 1114159, 983043, 31, 786480, 1048579, 26, 852016, 1048579, 27, 917552, 1048579, 28, 983088, 1048579, 29, 1048624, 1048579, 30, 1114160, 1048579, 31, 917553, 1114115, 28, 983089, 1114115, 29, 1048625, 1114115, 30, 1114161, 1114115, 31, 1048626, 1179651, 30, 1114162, 1179651, 31, 917555, 1245187, 28, 983091, 1245187, 29, 1048627, 1245187, 30, 1114163, 1245187, 31, 852020, 1310723, 27, 917556, 1310723, 28, 983092, 1310723, 29, 1048628, 1310723, 30, 1114164, 1310723, 31, 917557, 1376259, 28, 983093, 1376259, 29, 1048629, 1376259, 30, 1114165, 1376259, 31, 1048630, 1441795, 30, 1114166, 1441795, 31, 917559, 1507331, 28, 983095, 1507331, 29, 1048631, 1507331, 30, 1114167, 1507331, 31, 720952, 1572867, 25, 786488, 1572867, 26, 852024, 1572867, 27, 917560, 1572867, 28, 983096, 1572867, 29, 1048632, 1572867, 30, 1114168, 1572867, 31, 720953, 1638403, 25, 786489, 1638403, 26, 852025, 1638403, 27, 917561, 1638403, 28, 983097, 1638403, 29, 1048633, 1638403, 30, 1114169, 1638403, 31, 852026, 1703939, 27, 917562, 1703939, 28, 983098, 1703939, 29, 1048634, 1703939, 30, 1114170, 1703939, 31, 1048635, 1769475, 30, 1114171, 1769475, 31, 786492, 1835011, 26, 852028, 1835011, 27, 917564, 1835011, 28, 983100, 1835011, 29, 1048636, 1835011, 30, 1114172, 1835011, 31, 655421, 1900547, 24, 720957, 1900547, 25, 786493, 1900547, 26, 852029, 1900547, 27, 917565, 1900547, 28, 983101, 1900547, 29, 1048637, 1900547, 30, 1114173, 1900547, 31, 720958, 1966083, 25, 786494, 1966083, 26, 852030, 1966083, 27, 917566, 1966083, 28, 983102, 1966083, 29, 1048638, 1966083, 30, 1114174, 1966083, 31, 786495, 2031619, 26, 852031, 2031619, 27, 917567, 2031619, 28, 983103, 2031619, 29, 1048639, 2031619, 30, 1114175, 2031619, 31, 983104, 2097155, 29, 1048640, 2097155, 30, 1114176, 2097155, 31, 786448, 1835011, 26, 851984, 1835011, 27, 655377, 1900547, 24, 720913, 1900547, 25, 786449, 1900547, 26, 851985, 1900547, 27, 917521, 1900547, 28, 983057, 1900547, 29, 720914, 1966083, 25, 786450, 1966083, 26, 851986, 1966083, 27, 786451, 2031619, 26, 1048591, 1769475, 30, 1114127, 1769475, 31, 1048590, 1179651, 22, 1114126, 1179651, 23)

[node name="forest_decoration2" parent="base_zone" index="14"]
layer_0/tile_data = PackedInt32Array(983040, 1638403, 13, 1048576, 1638403, 14, 1114112, 1638403, 15, 786433, 1703939, 10, 851969, 1703939, 11, 917505, 1703939, 12, 983041, 1703939, 13, 1048577, 1703939, 14, 1114113, 1703939, 15, 720898, 1769475, 9, 786434, 1769475, 10, 851970, 1769475, 11, 917506, 1769475, 12, 983042, 1769475, 13, 1048578, 1769475, 14, 1114114, 1769475, 15, 786435, 1835011, 10, 851971, 1835011, 11, 917507, 1835011, 12, 983043, 1835011, 13, 1048579, 1835011, 14, 1114115, 1835011, 15, 917508, 1900547, 12, 983044, 1900547, 13, 1048580, 1900547, 14, 1114116, 1900547, 15, 851973, 1966083, 11, 917509, 1966083, 12, 983045, 1966083, 13, 1048581, 1966083, 14, 1114117, 1966083, 15, 786438, 2031619, 10, 851974, 2031619, 11, 917510, 2031619, 12, 983046, 2031619, 13, 1048582, 2031619, 14, 1114118, 2031619, 15, 786439, 2097155, 10, 851975, 2097155, 11, 917511, 2097155, 12, 983047, 2097155, 13, 1048583, 2097155, 14, 1114119, 2097155, 15, 851976, 2162691, 11, 917512, 2162691, 12, 983048, 2162691, 13, 1048584, 2162691, 14, 1114120, 2162691, 15, 851977, 2228227, 11, 917513, 2228227, 12, 983049, 2228227, 13, 1048585, 2228227, 14, 1114121, 2228227, 15, 720906, 2293763, 9, 786442, 2293763, 10, 851978, 2293763, 11, 917514, 2293763, 12, 983050, 2293763, 13, 1048586, 2293763, 14, 1114122, 2293763, 15, 655371, 2359299, 8, 720907, 2359299, 9, 786443, 2359299, 10, 851979, 2359299, 11, 917515, 2359299, 12, 983051, 2359299, 13, 1048587, 2359299, 14, 1114123, 2359299, 15, 720908, 2424835, 9, 786444, 2424835, 10, 851980, 2424835, 11, 917516, 2424835, 12, 983052, 2424835, 13, 1048588, 2424835, 14, 1114124, 2424835, 15, 917517, 2490371, 12, 983053, 2490371, 13, 1048589, 2490371, 14, 1114125, 2490371, 15, 983065, 1638403, 13, 1048601, 1638403, 14, 1114137, 1638403, 15, 786458, 1703939, 10, 851994, 1703939, 11, 917530, 1703939, 12, 983066, 1703939, 13, 1048602, 1703939, 14, 1114138, 1703939, 15, 720923, 1769475, 9, 786459, 1769475, 10, 851995, 1769475, 11, 917531, 1769475, 12, 983067, 1769475, 13, 1048603, 1769475, 14, 1114139, 1769475, 15, 786460, 1835011, 10, 851996, 1835011, 11, 917532, 1835011, 12, 983068, 1835011, 13, 1048604, 1835011, 14, 1114140, 1835011, 15, 917533, 1900547, 12, 983069, 1900547, 13, 1048605, 1900547, 14, 1114141, 1900547, 15, 851998, 1966083, 11, 917534, 1966083, 12, 983070, 1966083, 13, 1048606, 1966083, 14, 1114142, 1966083, 15, 786463, 2031619, 10, 851999, 2031619, 11, 917535, 2031619, 12, 983071, 2031619, 13, 1048607, 2031619, 14, 1114143, 2031619, 15, 786464, 2097155, 10, 852000, 2097155, 11, 917536, 2097155, 12, 983072, 2097155, 13, 1048608, 2097155, 14, 1114144, 2097155, 15, 852001, 2162691, 11, 917537, 2162691, 12, 983073, 2162691, 13, 1048609, 2162691, 14, 1114145, 2162691, 15, 852002, 2228227, 11, 917538, 2228227, 12, 983074, 2228227, 13, 1048610, 2228227, 14, 1114146, 2228227, 15, 720931, 2293763, 9, 786467, 2293763, 10, 852003, 2293763, 11, 917539, 2293763, 12, 983075, 2293763, 13, 1048611, 2293763, 14, 1114147, 2293763, 15, 655396, 2359299, 8, 720932, 2359299, 9, 786468, 2359299, 10, 852004, 2359299, 11, 917540, 2359299, 12, 983076, 2359299, 13, 1048612, 2359299, 14, 1114148, 2359299, 15, 720933, 2424835, 9, 786469, 2424835, 10, 852005, 2424835, 11, 917541, 2424835, 12, 983077, 2424835, 13, 1048613, 2424835, 14, 1114149, 2424835, 15, 917542, 2490371, 12, 983078, 2490371, 13, 1048614, 2490371, 14, 1114150, 2490371, 15, 851982, 1048579, 3, 917518, 1048579, 4, 983054, 1048579, 5, 851983, 1114115, 3, 917519, 1114115, 4, 983055, 1114115, 5, 1048591, 1114115, 6, 1114127, 1114115, 7, 917520, 1179651, 4, 983056, 1179651, 5, 1048592, 1179651, 6, 1114128, 1179651, 7, 917521, 1245187, 4, 983057, 1245187, 5, 1048593, 1245187, 6, 917522, 1310723, 4, 983058, 1310723, 5, 1048594, 1310723, 6, 917523, 1376259, 4, 983059, 1376259, 5, 1048595, 1376259, 6, 1114131, 1376259, 7, 917524, 1441795, 4, 983060, 1441795, 5, 1048596, 1441795, 6, 1114132, 1441795, 7, 917525, 1507331, 4, 983061, 1507331, 5, 1048597, 1507331, 6, 1114133, 1507331, 7)

[node name="forest_decoration3" parent="base_zone" index="15"]
layer_0/tile_data = PackedInt32Array(917509, 1179651, 20, 983045, 1179651, 21, 1048581, 1179651, 22, 1114117, 1179651, 23, 917510, 1245187, 20, 983046, 1245187, 21, 1048582, 1245187, 22, 1114118, 1245187, 23, 917511, 1310723, 20, 983047, 1310723, 21, 1048583, 1310723, 22, 1114119, 1310723, 23, 917512, 1376259, 20, 983048, 1376259, 21, 1048584, 1376259, 22, 1114120, 1376259, 23, 983049, 1441795, 21, 1048585, 1441795, 22, 1114121, 1441795, 23, 983050, 1507331, 21, 1048586, 1507331, 22, 1114122, 1507331, 23, 983051, 1572867, 21, 1048587, 1572867, 22, 1114123, 1572867, 23, 983052, 1638403, 21, 1048588, 1638403, 22, 1114124, 1638403, 23, 917517, 1703939, 20, 983053, 1703939, 21, 1048589, 1703939, 22, 1114125, 1703939, 23, 983054, 1769475, 21, 1048590, 1769475, 22, 1114126, 1769475, 23, 983055, 1835011, 21, 1048591, 1835011, 22, 1114127, 1835011, 23, 983056, 1900547, 21, 1048592, 1900547, 22, 1114128, 1900547, 23, 1048593, 1966083, 22, 1114129, 1966083, 23, 983058, 2031619, 21, 1048594, 2031619, 22, 1114130, 2031619, 23, 917523, 2097155, 20, 983059, 2097155, 21, 1048595, 2097155, 22, 1114131, 2097155, 23, 917524, 2162691, 20, 983060, 2162691, 21, 1048596, 2162691, 22, 1114132, 2162691, 23, 917525, 2228227, 20, 983061, 2228227, 21, 1048597, 2228227, 22, 1114133, 2228227, 23, 917526, 2293763, 20, 983062, 2293763, 21, 1048598, 2293763, 22, 1114134, 2293763, 23, 983063, 2359299, 21, 1048599, 2359299, 22, 1114135, 2359299, 23)

[node name="stone_blocks_decorations" parent="base_zone" index="16"]
layer_0/tile_data = PackedInt32Array(983052, 262150, 1, 1048588, 262150, 2, 1114124, 262150, 3, 917517, 327686, 0, 983053, 327686, 1, 1048589, 327686, 2, 1114125, 327686, 3, 917518, 393222, 0, 983054, 393222, 1, 1048590, 393222, 2, 1114126, 393222, 3, 983055, 458758, 1, 1048591, 458758, 2, 1114127, 458758, 3, 983048, 1245187, 37, 1048584, 1245187, 38, 1114120, 1245187, 39, 983049, 1310723, 37, 1048585, 1310723, 38, 1114121, 1310723, 39, 983050, 1376259, 37, 1048586, 1376259, 38, 1114122, 1376259, 39, 1048587, 1441795, 38)

[node name="cemetery_decorations1" parent="base_zone" index="17"]
layer_0/tile_data = PackedInt32Array(1048591, 655366, 14, 1114127, 655366, 15, 1048592, 720902, 14, 1114128, 720902, 15, 1048593, 786438, 14, 1114129, 786438, 15, 1048594, 851974, 14, 1114130, 851974, 15, 1048595, 917510, 14, 1114131, 917510, 15, 1048596, 983046, 14, 1114132, 983046, 15, 1048597, 1048582, 14, 1114133, 1048582, 15, 1048598, 1114118, 14, 1114134, 1114118, 15, 1114135, 1179654, 15, 1114136, 1245190, 15)

[node name="cemetery_decorations2" parent="base_zone" index="18"]
layer_0/tile_data = PackedInt32Array(1114112, 1572867, 39, 1114113, 1638403, 39, 1114114, 1703939, 39, 1114115, 1769475, 39, 1114116, 1835011, 39, 1114117, 1900547, 39, 1114118, 1966083, 39, 1114119, 2031619, 39, 1114120, 2097155, 39, 1114121, 2162691, 39)

[node name="cemetery_decorations3" parent="base_zone" index="19"]
layer_0/tile_data = PackedInt32Array(983053, 1179654, 17, 1048589, 1179654, 18, 1114125, 1179654, 19, 983054, 1245190, 17, 1048590, 1245190, 18, 1114126, 1245190, 19, 1048592, 262150, 8, 1114128, 262150, 9, 1048593, 327686, 8, 1114129, 327686, 9, 1048594, 393222, 8, 1114130, 393222, 9, 1048595, 458758, 8, 1114131, 458758, 9, 1048596, 524294, 8, 1114132, 524294, 9, 1048597, 589830, 8, 1114133, 589830, 9, 1114136, 3, 35, 1048601, 65539, 34, 1114137, 65539, 35, 1114138, 131075, 35, 1114139, 196611, 35, 1114140, 262147, 35, 1114141, 327683, 35, 1114142, 393219, 35, 1114143, 458755, 35, 1114144, 524291, 35, 1114145, 589827, 35, 1114146, 655363, 35, 1048611, 720899, 34, 1114147, 720899, 35, 1114148, 786435, 35, 1114149, 851971, 35, 1114150, 917507, 35, 1114151, 983043, 35, 1114152, 1048579, 35, 1114153, 1114115, 35, 1048618, 1179651, 34, 1114154, 1179651, 35, 1048619, 1245187, 34, 1114155, 1245187, 35, 1048620, 1310723, 34, 1114156, 1310723, 35, 1114157, 1376259, 35, 1048577, 2162691, 30, 1114113, 2162691, 31, 1048578, 2228227, 30, 1114114, 2228227, 31, 1114115, 2293763, 31, 1114116, 2359299, 31, 1048581, 2424835, 30, 1114117, 2424835, 31, 1048582, 2490371, 30, 1114118, 2490371, 31, 1114119, 2555907, 31)

[node name="grass_decorations" parent="base_zone" index="20"]
layer_0/tile_data = PackedInt32Array(1179643, 1835011, 35, 1179644, 1900547, 35, 1179645, 1966083, 35, 1179646, 1638403, 35, 1179647, 1703939, 35, 1114112, 2031619, 35, 1114113, 1769475, 35, 1114114, 1966083, 35, 1114115, 1703939, 35, 1114116, 1769475, 35, 1114117, 1572867, 35, 1114118, 1638403, 35, 1114119, 1769475, 35, 1114120, 1769475, 35, 1114121, 1638403, 35, 1114122, 1900547, 35, 1114123, 1835011, 35, 1114124, 1966083, 35, 1114125, 1638403, 35, 1114126, 1572867, 35, 1114127, 2031619, 35, 1114128, 1638403, 35, 1114129, 1769475, 35, 1114130, 1703939, 35, 1114131, 1900547, 35, 1114132, 1900547, 35, 1114133, 1966083, 35, 1114134, 1900547, 35, 1114135, 2031619, 35, 1114136, 2031619, 35, 1114137, 1966083, 35, 1114138, 1900547, 35, 1114139, 1638403, 35, 1114140, 1769475, 35, 1114141, 1835011, 35, 1114142, 1638403, 35, 1114143, 1703939, 35, 1114144, 1835011, 35, 1114145, 1769475, 35, 1114146, 2031619, 35, 1114147, 1638403, 35, 1114148, 1703939, 35, 1114149, 1572867, 35, 1114150, 1900547, 35, 1114151, 1769475, 35, 1114152, 1769475, 35, 1114153, 1703939, 35, 1114154, 1703939, 35)

[node name="MoonBackground" parent="base_zone" instance=ExtResource("4_1vpba")]
z_index = -100
y_sort_enabled = true

[node name="base_ground2" parent="base_zone" instance=ExtResource("5_cun54")]
layer_0/tile_data = PackedInt32Array(1245183, 0, 8, 1179648, 65536, 8, 1179649, 131072, 8, 1179650, 196608, 8, 1179651, 262144, 8, 1179652, 327680, 8, 1179653, 393216, 8, 1179654, 458752, 8, 1179655, 524288, 8, 1179656, 589824, 8, 1179657, 655360, 8, 1179658, 720896, 8, 1179659, 786432, 8, 1179660, 65536, 8, 1179661, 65536, 8, 1179662, 65536, 8, 1179663, 65536, 8, 1179664, 65536, 8, 1179665, 65536, 8, 1179666, 65536, 8, 1179667, 65536, 8, 1179668, 65536, 8, 1179669, 65536, 8, 1179670, 65536, 8, 1179671, 65536, 8, 1179672, 65536, 8, 1179673, 65536, 8, 1179674, 65536, 8, 1179675, 65536, 8, 1179676, 65536, 8, 1179677, 65536, 8, 1179678, 65536, 8, 1179679, 65536, 8, 1179680, 65536, 8, 1179681, 65536, 8, 1179682, 65536, 8, 1179683, 65536, 8, 1179684, 65536, 8, 1179685, 65536, 8, 1179686, 65536, 8, 1179687, 65536, 8, 1179688, 65536, 8)

[node name="player" parent="." instance=ExtResource("9_40sjv")]
light_mask = 0
position = Vector2(-31, 265)

[node name="player_walk_timer" type="Timer" parent="player"]
wait_time = 6.0
one_shot = true

[node name="player_action_timer" type="Timer" parent="player"]
wait_time = 5.0
one_shot = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 128

[node name="BackgroundColor" type="ColorRect" parent="CanvasLayer2"]
top_level = true
y_sort_enabled = true
custom_minimum_size = Vector2(640, 380)
offset_right = 640.0
offset_bottom = 380.0
color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
top_level = true
z_index = 4096
y_sort_enabled = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.5
offset_top = -40.0
offset_right = 47.5
grow_horizontal = 2
grow_vertical = 0
text = "Press Space"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(156, 87)
scale = Vector2(0.75, 0.75)
texture = ExtResource("11_exp17")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_title"
libraries = {
"": SubResource("AnimationLibrary_g62fg")
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="timeout" from="player/player_walk_timer" to="." method="_on_player_walk_timer_timeout"]
[connection signal="timeout" from="player/player_action_timer" to="." method="_on_player_action_timer_timeout"]

[editable path="base_zone"]
